--- a/package.json
+++ b/package.json
@@ -8,12 +8,49 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-native-firebase/app": "^8.4.5",
+    "@react-native-firebase/auth": "^9.3.0",
+    "@react-native-firebase/firestore": "^7.8.6",
+    "@react-navigation/native": "^5.7.5",
+    "axios": "^0.20.0",
+    "deprecated-react-native-listview": "0.0.6",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^7.22.1",
+    "native-base": "^2.13.14",
+    "random-string": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-howler": "^4.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-audio-streaming": "^2.3.2",
+    "react-native-button": "^3.0.1",
+    "react-native-elements": "^2.3.2",
+    "react-native-firebase": "^5.6.0",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-navigation": "^7.1.0",
+    "react-native-orientation": "^3.1.3",
+    "react-native-picker-select": "^8.0.2",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
+    "react-native-sound": "^0.11.0",
+    "react-native-sound-player": "^0.10.4",
+    "react-native-track-player": "^1.2.3",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^10.9.1",
+    "react-native-youtube-iframe": "^1.3.0",
+    "react-native-yt-player": "^1.1.0",
+    "react-navigation": "^4.0.2",
+    "react-navigation-drawer": "^2.5.2",
+    "react-navigation-stack": "^1.5.4",
+    "react-navigation-tabs": "^2.4.1",
+    "youtube-api-search": "0.0.5",
+    "youtube-api-v3-search": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
